# backend/internal/dto/model_invite_activity_200_response.go
@@ -1,0 +1,18 @@
+/*
+ * Ban Do 5 Tot API
+ *
+ * Backend API for Ban Do 5 Tot project
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type InviteActivity200Response struct {
+
+	// Indicates if the request was successful
+	Success bool `json:"success,omitempty"`
+
+	Data InviteActivityResult `json:"data,omitempty"`
+}
