# backend/internal/dto/model_invite_activity_request.go
@@ -1,0 +1,14 @@
+/*
+ * Ban Do 5 Tot API
+ *
+ * Backend API for Ban Do 5 Tot project
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type InviteActivityRequest struct {
+	UserIds []string `json:"userIds"`
+}
