# backend/internal/dto/model_invite_activity_result.go
@@ -1,0 +1,18 @@
+/*
+ * Ban Do 5 Tot API
+ *
+ * Backend API for Ban Do 5 Tot project
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type InviteActivityResult struct {
+	Created int32 `json:"created"`
+
+	Skipped int32 `json:"skipped"`
+
+	MatchedUsers int32 `json:"matchedUsers"`
+}
